--- a/nanodip/templates/analysis_start.html
+++ b/nanodip/templates/analysis_start.html
@@ -24,9 +24,9 @@
     <tr>
       <td>{{run}}</td>
       <td>
-        <a href="./analysisLauncher?functionName=methylationPoller&sampleName={{run}}&refAnno=None" class="show" target="_blank"
+        <a href="./analysis?func=cpg&samp={{run}}" class="show" target="_blank"
         rel="noopener noreferrer" title="{{run}}: CpGs">
-          plot
+          get CpGs
         </a>
       </td>
       <td>
