--- a/nanodip/templates/device_status.html
+++ b/nanodip/templates/device_status.html
@@ -27,9 +27,9 @@
     {% endif %}
 
       Sample ID: {{sample_id}}<br>
-      {{run_state}}
+      {{state}}
     <br>
-    {{run_yield}}
+    {{yield_}}
   </div>
 
 </body>
