--- a/nanodip/templates/start.html
+++ b/nanodip/templates/start.html
@@ -28,42 +28,46 @@
 
 {% else %}
 
-  <form action="start" method="GET">
+  {% if test %}
+    <form action="start_test" method="GET">
+  {% else %}
+    <form action="start" method="GET">
+  {% endif %}
     Select an idle Mk1b:&nbsp;
 
     <select name="device_id" id="device_id">
       {% for pos in idle %}
-      <option value="{{pos}}">
-        {{pos}}: {{flow_cell[pos]}}
-      </option>
+        <option value="{{pos}}">
+          {{pos}}: {{flow_cell[pos]}}
+        </option>
       {% endfor %}
     </select>
     &nbsp;
 
-    {% if test %}
-    <input type="submit" value="start test run now (0.1h)"/>
-    {% else %}
-    and enter the sample ID:&nbsp;
-    <input type="text" name="sample_id" />
-    &nbsp;with start voltage&nbsp;
-    <select name="start_voltage" id="start_voltage">
-    {% for voltage in range(-180,-260,-5) %}
-      <option value="{{voltage}}">{{voltage}} mV</option>
-    {% endfor %}
-    </select>
-    &nbsp;for&nbsp;
-    <input type="text" name="run_duration" value="72" />
-      &nbsp;hours.
-      &nbsp;Reference set&nbsp;
-      <select name="reference_id" id="reference_id">
-        {% for ref in references %}
-        <option value="{{ref}}">{{ref}}</option>
-        {% endfor %}
+  {% if test %}
+      <input type="submit" value="start test run now (0.1h)"/>
+  {% else %}
+      and enter the sample ID:&nbsp;
+      <input type="text" name="sample_id" />
+      &nbsp;with start voltage&nbsp;
+      <select name="start_voltage" id="start_voltage">
+      {% for voltage in range(-180,-260,-5) %}
+        <option value="{{voltage}}">{{voltage}} mV</option>
+      {% endfor %}
       </select>
-      &nbsp;
-    <input type="submit" value="start sequencing now"/>
-    {% endif %}
-  </form>
+      &nbsp;for&nbsp;
+      <input type="text" name="run_duration" value="72" />
+        &nbsp;hours.
+        &nbsp;Reference set&nbsp;
+        <select name="reference_id" id="reference_id">
+          {% for ref in references %}
+            <option value="{{ref}}">{{ref}}</option>
+          {% endfor %}
+        </select>
+        &nbsp;
+      <input type="submit" value="start sequencing now"/>
+  {% endif %}
+    </form>
 
 {% endif %}
 
