--- a/nanodip/templates/base.html
+++ b/nanodip/templates/base.html
@@ -28,7 +28,7 @@
         <a href="start" title="Start a sequencing run on an idle Mk1b device">Start Run</a>
       </li>
       <li>
-        <a href="test_run" title="Start a test seq. run on an idle Mk1b device to verify that the previous flow cell wash was successful.">Start Test</a>
+        <a href="start_test" title="Start a test seq. run on an idle Mk1b device to verify that the previous flow cell wash was successful.">Start Test</a>
       </li>
       <li>
         <a href="list_runs" title="List all buffered runs. Will be purged upon MinKNOW backend restart.">List Runs</a>
