--- a/nanodip/templates/device_status.html
+++ b/nanodip/templates/device_status.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="refresh" content="2">
+  <meta http-equiv="refresh" content="">
   <title>{{device_id}}: {{flow_cell_id}}</title>
   <link rel="stylesheet" href="static/style.css">
 </head>
