--- a/nanodip/templates/results.html
+++ b/nanodip/templates/results.html
@@ -17,7 +17,7 @@
     {% for file in files %}
       <tr>
         <td>
-          <a href="reports/{{file}}" class="results" target="_blank" rel="noopener noreferrer">
+          <a href="{{urls[file]}}" class="results" target="_blank" rel="noopener noreferrer">
             {{file}}
           </a>
         </td>
