--- a/nanodip/templates/base.html
+++ b/nanodip/templates/base.html
@@ -7,6 +7,8 @@
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="static/style.css">
   {% block head %}{% endblock %}
+  <script src="static/js/jquery-1.11.1.min.js"></script>
+  <script src="static/js/plotly-latest.min.js"></script>
 </head>
 
 <body>
