--- a/nanodip/templates/status.html
+++ b/nanodip/templates/status.html
@@ -7,24 +7,52 @@
 {% block body %}
 
 {% for pos in positions %}
-  <iframe src="{{url_live_device[pos]}}" height="200" width="600" title="{{pos}}" border=3></iframe>
-  <iframe src="{{url_analysis[pos]}}" height="200" width="600" title="{{pos}}" border=3></iframe>
+  <div class="device_box">
+    <div id="{{pos}}" class="device_element"></div>
+    <iframe class="device_element" src="{{url_analysis[pos]}}" height="200" width="600" title="{{pos}}" border=3></iframe>
+  </div>
+  <br>
   <br>
   <a href="{{url_device[pos]}}" target="_blank" title="Click to open device status page in new tab or
   window">{{pos}}</a>, live state: {{device_activity[pos]}}, active run: {{active_runs[pos]}}
+  <br>
 
   {% if active_runs[pos] != "none" %}
-    <a href="launchAutoTerminator?sampleName={{sample_id[pos]}}&deviceString={{pos}}" target="_blank">
+    <a href="{{url_auto_terminator[pos]}}" target="_blank">
       Click this link to launch automatic run terminator after {{mega_bases}} MB.
     </a>
     <br>
     <font color="#ff0000">
-    <a href="stop_sequencing?device_id={{pos}}" title="Clicking this will terminate the current run immediately! Use with care!">
+    <a href="{{url_stop_sequencing[pos]}}" title="Clicking this will terminate the current run immediately! Use with care!">
       terminate manually
     </a>
     </font>
   {% endif %}
 
+
+
+
+  <script>
+    /*Refresh the device status every 2 seconds.*/
+    function refreshDeviceStatus() {
+      $.ajax({
+        url: "{{url_device["none"]}}",
+        type: "GET",
+        contentType: "application/json;charset=UTF-8",
+        data: {
+          "device_id": "{{pos}}",
+        },
+        dataType:"html",
+        success: function (data) {
+          $("#{{positions[0]}}").html(data);
+          setTimeout(refreshDeviceStatus, 2000);
+        }
+      });
+    }
+    $(document).ready(function(){
+      refreshDeviceStatus();
+    })
+  </script>
 {% endfor %}
 
 {% endblock %}
