--- a/nanodip/templates/status.html
+++ b/nanodip/templates/status.html
@@ -7,51 +7,41 @@
 {% block body %}
 
 {% for pos in positions %}
+
   <div class="device_box">
     <div id="{{pos}}" class="device_element"></div>
     <iframe class="device_element" src="{{url_analysis[pos]}}" height="200" width="600" title="{{pos}}" border=3></iframe>
   </div>
-  <br>
-  <br>
-  <a href="{{url_device[pos]}}" target="_blank" title="Click to open device status page in new tab or
-  window">{{pos}}</a>, live state: {{device_activity[pos]}}, active run: {{active_runs[pos]}}
-  <br>
 
-  {% if active_runs[pos] != "none" %}
-    <a href="{{url_auto_terminator[pos]}}" target="_blank">
-      Click this link to launch automatic run terminator after {{mega_bases}} MB.
-    </a>
-    <br>
-    <font color="#ff0000">
-    <a href="{{url_stop_sequencing[pos]}}" title="Clicking this will terminate the current run immediately! Use with care!">
-      terminate manually
-    </a>
-    </font>
-  {% endif %}
-
-
+  <script>
+    $(document).ready(function() {
+      var refreshPage = function() {
+        for (pos of {{positions}}) {
+          refreshDeviceStatus(pos);
+        }
+        setTimeout(refreshPage, 3000);
+      };
+      refreshPage();
+    })
+  </script>
 
 
   <script>
     /*Refresh the device status every 2 seconds.*/
-    function refreshDeviceStatus() {
+    function refreshDeviceStatus(deviceId) {
       $.ajax({
         url: "{{url_device["none"]}}",
         type: "GET",
         contentType: "application/json;charset=UTF-8",
         data: {
-          "device_id": "{{pos}}",
+          "device_id": deviceId,
         },
         dataType:"html",
         success: function (data) {
-          $("#{{positions[0]}}").html(data);
-          setTimeout(refreshDeviceStatus, 2000);
+          $("#" + deviceId).html(data);
         }
       });
     }
-    $(document).ready(function(){
-      refreshDeviceStatus();
-    })
   </script>
 {% endfor %}
 
