--- a/nanodip/templates/base.html
+++ b/nanodip/templates/base.html
@@ -42,6 +42,9 @@
         <a href="/analysis" title="Launch data analyses manually, e.g. for retrospective analysis">Analysis</a>
       </li>
       <li>
+        <a href="/epidip_report" title="Generate report PDFs for EpiDiP cases">EpiDiP report</a>
+      </li>
+      <li>
         <a href="/about" title="Version, etc.">About</a>
       </li>
     </ul>
