--- a/nanodip/templates/base.html
+++ b/nanodip/templates/base.html
@@ -15,7 +15,7 @@
 
   <nav id="navbar">
     <div class="logo">
-      <img src="static/img/logo.png" width="40px" height="40px">
+      <img src="static/img/logo.svg" width="40px" height="40px">
     </div>
     <ul class="nav_menu">
       <li>
