--- a/nanodip/templates/pdf_report.html
+++ b/nanodip/templates/pdf_report.html
@@ -10,7 +10,7 @@
 <body>
 
 <h1>
-  <img src="static/img/EpiDiP_Logo_01.png" width="30px" align="top">&nbsp;&nbsp;
+  <img src="static/img/logo.png" width="30px" align="top">&nbsp;&nbsp;
   NanoDiP Report for Sample {{sample_name}}
 </h1>
 <table border="0">
