--- a/nanodip/static/style.css
+++ b/nanodip/static/style.css
@@ -70,7 +70,7 @@ nav a:active::after {
 
 table.analysis {
   border-collapse: collapse;
-  margin: 25px 0;
+  margin: 15px 0;
   border-radius: 5px 5px 0 0;
   overflow: hidden;
   box-shadow: 0 0 20px rgba(0,0,0,0.15);
@@ -78,14 +78,14 @@ table.analysis {
 }
 
 table.analysis thead tr {
-  background-color: #009879;
+  background-color: #1290cc;
   text-align: left;
   color: #ffffff;
 }
 
 table.analysis th,
 table.analysis td {
-  padding: 10px 15px;
+  padding: 5px 15px;
 }
 
 table.analysis tbody tr {
@@ -97,7 +97,7 @@ table.analysis tbody tr:nth-of-type(even) {
 }
 
 table.analysis tbody tr:last-of-type {
-  border-bottom: 2px solid #009879;
+  border-bottom: 2px solid #1290cc;
 }
 
 table.analysis tbody td:nth-child(1) {
@@ -136,7 +136,7 @@ a.results {
 .loader {
   border: 5px solid #f3f3f3;
   border-radius: 50%;
-  border-top: 5px solid #009879;
+  border-top: 5px solid #1290cc;
   width: 50px;
   height: 50px;
   position: absolute;
