--- a/nanodip/templates/epidip_report.html
+++ b/nanodip/templates/epidip_report.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-  <!-- EpiDiP report for {{sentrix_id}} with {{reference_umap}} -->
+  EpiDiP report
   <hr>
   <form action="epidip_report" method="GET">
   &nbsp;
