--- a/nanodip/templates/analysis_umap.html
+++ b/nanodip/templates/analysis_umap.html
@@ -6,21 +6,17 @@
 
 {% block body %}
 
-  <!--iframe src="./umap?samp={{sample_name}}&ref={{reference_name}}" title="{{sample_name}}" id="umap_frame"
-  width="1800px" height="900px">
-  </iframe-->
+<div class="radio" id="umap_radio">
+  <input type="radio" id="choice_all" name="display_type" value="all" checked="checked">
+  <label for="choice_all">All</label>
 
-  <div class="radio" id="umap_radio">
-    <input type="radio" id="choice_all" name="display_type" value="all" checked="checked">
-    <label for="choice_all">All</label>
+  <input type="radio" id="choice_cu" name="display_type" value="cu">
+  <label for="choice_cu">Close-up</label>
+</div>
 
-    <input type="radio" id="choice_cu" name="display_type" value="cu">
-    <label for="choice_cu">Close-up</label>
-  </div>
-
-  <div class="loader" id="loader"></div>
-  <div id="umap_all"></div>
-  <div id="umap_cu"></div>
+<div class="loader" id="loader"></div>
+<div id="umap_all"></div>
+<div id="umap_cu"></div>
 
 
 <script>
@@ -30,11 +26,8 @@
     Plotly.newPlot(plotId, plotJSON, {});
     Plotly.relayout(plotId, {height: "800", width: "1580"})
   }
-</script>
-<script>
-  /*Load umap Plot on startup.*/
-  var umapAll;
-  var umapCloseUp;
+
+  /*Load umap-plot and umap-close-up-plot on startup.*/
   $(document).ready(function(){
     {% if first_use %}
     alert("Binary reference data has not been created yet. Takes several minutes.")
@@ -44,14 +37,13 @@
       type: "GET",
       contentType: "application/json;charset=UTF-8",
       data: {
-        "samp": "{{sample_name}}",
-        "ref": "{{reference_name}}",
+        "sample_name": "{{sample_name}}",
+        "reference_name": "{{reference_name}}",
         "close_up": "",
         "new": "{{new}}",
       },
       dataType:"json",
       success: function (data) {
-        umapAll = data;
         document.getElementById("loader").style.display = "none";
         renderPlot(data, "umap_all");
         $.ajax({
@@ -59,23 +51,20 @@
           type: "GET",
           contentType: "application/json;charset=UTF-8",
           data: {
-            "samp": "{{sample_name}}",
-            "ref": "{{reference_name}}",
+            "sample_name": "{{sample_name}}",
+            "reference_name": "{{reference_name}}",
             "close_up": "True",
             "new": "False",
           },
           dataType:"json",
           success: function (data) {
-            umapCloseUp = data;
             renderPlot(data, "umap_cu");
           }
         });
       }
     });
   })
-</script>
 
-<script>
   $(document).ready(function(){
     $('#umap_cu').hide();
     $('#umap_all').show();
