--- a/nanodip/jupyter/templates/change_voltage.html
+++ b/nanodip/jupyter/templates/change_voltage.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 
+{% block head %}
+{% endblock %}
+
 {% block title %}
-  Error
+  Change Voltage
 {% endblock %}
 
 {% block body %}
-
+    Voltage set to {{voltage}} mV.
 {% endblock %}
